--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -41,6 +41,7 @@
         <script type="text/javascript" src="../public/js/jquery-1.12.4.js" th:src="@{/js/jquery-1.12.4.js}"></script>
         <script type="text/javascript" src="../public/js/jquery.dataTables.min.js" th:src="@{/js/jquery.dataTables.min.js}"></script>
         <script type="text/javascript" src="../public/js/table/cards-table.js" th:src="@{/js/table/cards-table.js}"></script>
+        <script type="text/javascript" src="../public/js/table/magicexpansion-table.js" th:src="@{/js/table/magicexpansion-table.js}"></script>
     </div>
 </body>
 </html>
